# OMSD

./: pyproject.toml  task1.ipynb
task_1/: bisection.py  task1.ipynb
task_2/: golden_hord.py  hesse.py  taske.py
task_2/functions/: f_1.py  f_2.py  f_3.py  f_4.py
